--- a/Delivery_Application/Delivery_Application.ipynb
+++ b/Delivery_Application/Delivery_Application.ipynb
@@ -20,7 +20,7 @@
     "-  `\n",
     "ab_order`  – подробная информация о составе заказа, тут для каждого заказа есть список id тех продуктов, которые были включен   заказ\n",
     "-  `\n",
-    "ab_produc`ts – подробная информация о продуктах, их название и стоимость"
+    "ab_products` – подробная информация о продуктах, их название и стоимость"
    ]
   },
   {
